--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -8,6 +8,10 @@
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100%;
     border-radius: 16px;
     box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
     cursor: pointer;
@@ -23,8 +27,7 @@
 }
 
 .card-img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
     border-radius: 16px;
 }
 
@@ -48,5 +51,5 @@
 .card-back {
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
-    position: relative;
+    position: absolute;
 }
